# image-batch-processor

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  Requirements.txt  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
src/: __init__.py
